src/test/resources/config/google_com_proxy.json
{"listeners": [{
    "address": "tcp://127.0.0.1:10000",
    "filters": [{
      "type": "read",
      "name": "http_connection_manager",
      "config": {
        "codec_type": "auto",
        "stat_prefix": "ingress_http",
        "route_config": {
          "virtual_hosts": [{
            "name": "local_service",
            "domains": [
              "*"
            ],
            "routes": [{
              "timeout_ms": 0,
              "prefix": "/",
              "host_rewrite": "www.google.com",
              "cluster": "service_google"
            }]
          }]
        },
        "filters": [{
          "type": "decoder",
          "name": "router",
          "config": {}
        }]
      }
    }]
  }],
  "admin": {
    "access_log_path": "/tmp/admin_access.log",
    "address": "tcp://127.0.0.1:9901"
  },
  "cluster_manager": {
    "clusters": [{
      "name": "service_google",
      "connect_timeout_ms": 250,
      "type": "logical_dns",
      "lb_type": "round_robin",
      "hosts": [{
        "url": "tcp://google.com:80"
      }]
    }]
  }
}
